--- a/result/2022-07-06.md
+++ b/result/2022-07-06.md
@@ -39,3 +39,4 @@
 39. [TJ沃伦签约篮网](https://s.weibo.com//weibo?q=%23TJ%E6%B2%83%E4%BC%A6%E7%AD%BE%E7%BA%A6%E7%AF%AE%E7%BD%91%23&Refer=top) 109924
 40. [见妻子被冲走旱鸭子丈夫扑进急流](https://s.weibo.com//weibo?q=%23%E8%A7%81%E5%A6%BB%E5%AD%90%E8%A2%AB%E5%86%B2%E8%B5%B0%E6%97%B1%E9%B8%AD%E5%AD%90%E4%B8%88%E5%A4%AB%E6%89%91%E8%BF%9B%E6%80%A5%E6%B5%81%23&Refer=top) 109493
 41. [这小棉袄有点漏风了](https://s.weibo.com//weibo?q=%23%E8%BF%99%E5%B0%8F%E6%A3%89%E8%A2%84%E6%9C%89%E7%82%B9%E6%BC%8F%E9%A3%8E%E4%BA%86%23&Refer=top) 88553
+42. [形式主义正能量还要伤及多少人](https://s.weibo.com//weibo?q=%23%E5%BD%A2%E5%BC%8F%E4%B8%BB%E4%B9%89%E6%AD%A3%E8%83%BD%E9%87%8F%E8%BF%98%E8%A6%81%E4%BC%A4%E5%8F%8A%E5%A4%9A%E5%B0%91%E4%BA%BA%23&Refer=top) 80827
